v0.7.9
- @Page annotation available on another @Page
- Adding @SharedBrowser.ONCE,@SharedBrowser.PER_METHOD,@SharedBrowser.PER_CLASS for junit and testng
- adding withClass filter
- moving to selenium 2.32.0
v0.7.8
- quit now do a check to avoid NPE
- package testng to fluentlenium-festassert
v0.7.7
-moving to selenium 2.31.0
v0.7.6
-moving to selenium 2.30.0
-don't package test dependencies
-Add support for @Page in test superclass
v0.7.5
-moving to selenium 2.29.0
v0.7.4
- moving to selenium 2.27.0
v0.7.3
- add getDefaultBasedUrl thanks to James Roper
 -add withDefaultPageWait, withDefaultSearchWait, getDefaultConfig
v0.7.2
- moving to selenium 2.25.0
- add an html function to get underlying html content thanks to Guillaume Balaine and Cedric Gourlay
v0.7.1
- add a doubleClick feature
v0.7
- add the containsText feature when waiting
- add IsolatedTest
- add wait until page is loaded feature
- add wait until page is at feature
- make the api fluent, you can now chain methods
If you want to wait that the page you want is the page you are, you can use :
```java
await().atMost(5, TimeUnit.SECONDS).untilPage(myPage).isAt();
```
v0.6
- ISSUE-8 : find return a FluentList<FluentWebElement>
- ISSUE-26 : Polish pollingEvery features
- ISSUE-22 : Fix bug on hasAttribute
- ISSUE-21 : use @BeforeMethod instead of @BeforeTest
- Add methods on fest assert : hasText, hasNotText, hasSize
- ISSUE-28 : Add custom message when await fail
- add @AjaxElement : wait for element to be found on a page context
- add snapshot for junit
- update to selenium 2.21
v 0.5.5
- Adding eq ne le lt ge gt to the asynchronous api m thanks to Cecile Hui Bon Hoa and Khanh Tuong Maudoux
- Change on maven structure
- Adding first draft of the testNG extension
- Provide an adapter to simplify extension of the framework
v 0.5.4
- Migration to org.fluentlenium
- update to selenium 2.16.1
v 0.5.3
- fix bugs notStartsWith and notEndsWith