@@ -20,7 +20,7 @@ package org.fluentlenium.core.filter.matcher;
  * PostFilter are used after the webdriver selection to fluentlenium.integration. the collection
  */
 public enum MatcherType {
-    CONTAINS("*"), START_WITH("^"), END_WITH("$"), EQUAL(""), NOT_CONTAINS(null), NOT_START_WITH(null), NOT_END_WITH(null);
+    CONTAINS("*"), START_WITH("^"), END_WITH("$"),CONTAINS_WORD("~"), EQUAL(""), NOT_CONTAINS(null), NOT_START_WITH(null), NOT_END_WITH(null);
 
     private String cssRepresentations;
 
