@@ -38,6 +38,7 @@
 <input id="selected" type="checkbox" value="John" checked/>
 <input id="disabled" type="checkbox" value="John" disabled="disabled"/>
 <input id="non_display" type="checkbox" value="John" style="display:none;"/>
+<span class="class1 class2 class3">Multiple css class</span>
 
 <span generated="true">Test custom attribute
 </span>
