@@ -3,6 +3,7 @@ v0.7.9
 - Adding @SharedBrowser.ONCE,@SharedBrowser.PER_METHOD,@SharedBrowser.PER_CLASS for junit and testng
 - adding withClass filter
 - moving to selenium 2.32.0
+- adding containsWord filter
 v0.7.8
 - quit now do a check to avoid NPE
 - package testng to fluentlenium-festassert
